# azurelens

./: .env.example  .gitignore  DESIGN.md  README.md  docker-compose.yml  mcp-success-test.txt
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py
apps/api/app/api/v1/: __init__.py  assets.py  compliance.py  dashboard.py  findings.py  health.py  remediations.py  reports.py  router.py  scans.py  scores.py  tenants.py  threat_intel.py
apps/api/app/core/: __init__.py  config.py  security.py
apps/api/app/demo/: __init__.py  data.py  service.py
apps/api/app/models/: __init__.py  asset.py  common.py  compliance.py  finding.py  report.py  scoring.py  tenant.py  threat_intel.py
apps/frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package.json  tsconfig.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/compliance/: page.tsx
apps/frontend/app/findings/: page.tsx
apps/frontend/app/remediations/: page.tsx
apps/frontend/app/scans/: page.tsx
apps/frontend/app/threats/: page.tsx
apps/frontend/components/: ComplianceSummary.tsx  EmptyState.tsx  KpiStrip.tsx  MitreTechniqueGrid.tsx  PageHeader.tsx  RemediationRoadmap.tsx  RiskTable.tsx  ScanStatusPanel.tsx  ScoreCard.tsx  SectionHeader.tsx  StatusBadge.tsx  ThreatExposurePanel.tsx
apps/frontend/components/shell/: AppShell.tsx  CommandSearch.tsx  NavLink.tsx  Sidebar.tsx  Topbar.tsx
apps/frontend/lib/: api.ts  demo-data.ts  fetchWithFallback.ts
apps/frontend/public/: .gitkeep
apps/frontend/types/: domain.ts
ci/: README.md  ci.yml
docs/: AI_ANALYSIS_ENGINE.md  API_CONTRACTS.md  ARCHITECTURE.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_SERVICES.md  CORRELATION_ENGINE.md  DATA_MODEL.md  DEMO_MODE.md  DEVELOPMENT_GUIDE.md  LOCAL_RUNBOOK.md  PHASE_11_ENTERPRISE_UX.md  PROMPT_SAFETY_MODEL.md  RISK_SCORING_MODEL.md  ROADMAP.md  SCANNER_ARCHITECTURE.md  SCHEMA_DESIGN.md  SECURITY_MODEL.md  THREAT_INTEL_ARCHITECTURE.md  THREAT_MODEL.md
infra/terraform/: README.md  app_service.tf  container_apps.tf  identity.tf  key_vault.tf  locals.tf  main.tf  monitoring.tf  networking.tf  outputs.tf  providers.tf  storage.tf  variables.tf
services/ai-engine/: README.md  pyproject.toml
services/ai-engine/ai_engine/: __init__.py  contracts.py  errors.py  grounding.py  main.py  prompt_templates.py  remediation_advisor.py  report_generator.py  safety.py
services/risk-engine/: README.md  pyproject.toml
services/risk-engine/risk_engine/: __init__.py  calculator.py  contracts.py  errors.py  explainability.py  formulas.py  main.py  policy.py  weights.py
services/scanner/: README.md  pyproject.toml
services/scanner/scanner/: __init__.py  base.py  context.py  contracts.py  errors.py  main.py  orchestrator.py  registry.py
services/scanner/scanner/plugins/: __init__.py  azure_resource_graph.py  defender_cloud.py  entra_identity.py  intune_device.py  m365_security.py  purview.py  sentinel.py
services/threat-intel/: README.md  pyproject.toml
services/threat-intel/threat_intel/: __init__.py  base.py  context.py  contracts.py  correlator.py  errors.py  main.py  normalizer.py  registry.py
services/threat-intel/threat_intel/connectors/: __init__.py  abuse_ch.py  alienvault_otx.py  cisa_kev.py  github_advisories.py  microsoft_defender_ti.py  misp.py  mitre_attack.py  nvd.py  opencti.py  sentinel_ti.py  virustotal.py
ux/: PHASE11.md  index.html
ux/assets/: app.js  styles.css
ux/views/: compliance.html  mitre.html
