[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azurelens-api"
version = "0.0.0"
description = "AzureLens backend API (FastAPI). Skeleton only — no business logic."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AzureLens" }]
dependencies = [
  "fastapi>=0.111,<0.120",
  "uvicorn[standard]>=0.30,<0.36",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4,<1.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "httpx>=0.27,<1.0",
]
# Future runtime extras (kept commented as a contract for later phases).
# azure = [
#   "azure-identity",
#   "azure-keyvault-secrets",
#   "azure-cosmos",
#   "azure-servicebus",
#   "msgraph-sdk",
# ]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
