[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azurelens-ai-engine"
version = "0.0.0"
description = "AzureLens AI Analysis engine. Skeleton — no Azure OpenAI calls yet."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AzureLens" }]
dependencies = [
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4,<1.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
]
# Future runtime extras (kept as a forward contract):
# ai = [
#   "openai",                     # Azure OpenAI SDK
#   "azure-search-documents",
#   "tiktoken",
# ]
# azure = [
#   "azure-identity",
#   "azure-cosmos",
#   "azure-servicebus",
# ]

[tool.hatch.build.targets.wheel]
packages = ["ai_engine"]

[project.scripts]
azurelens-ai-engine = "ai_engine.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
