[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azurelens-risk-engine"
version = "0.0.0"
description = "AzureLens Risk Scoring engine. Skeleton — no scoring logic yet."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AzureLens" }]
dependencies = [
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4,<1.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "hypothesis>=6.100,<7.0",
]
# Future runtime extras (kept as a forward contract):
# azure = [
#   "azure-identity",
#   "azure-cosmos",
#   "azure-servicebus",
# ]

[tool.hatch.build.targets.wheel]
packages = ["risk_engine"]

[project.scripts]
azurelens-risk-engine = "risk_engine.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
